--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
 
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Check the weather forecast for the next 15 days. Get daily updates on temperature, conditions, and more with this weather display app." />
+  <meta name="keywords" content="weather, forecast, React, web app" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -26,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Weather Forecast App</title>
 </head>
 
 <body>
